header-menu was ended

--- a/index.html
+++ b/index.html
@@ -12,34 +12,38 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-menu">
-        <div><a class="logo-text" href="#">Explore</a></div>
-        <div class="menu-container">
-            <nav class="menu">
-              <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Tours</a></li>
-                <li><a href="">Hotel</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Pages</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Login</a></li>
-              </ul>
-            </nav>
-            <button class="sign-up-btn">Sign UP</button>
+      <nav class="navigation header-menu">
+        <div class="container nav-wrapper">
+          <div class="nav-row">
+            <div><a class="logo-text" href="#">Explore</a></div>
+            <div class="nav-list">
+              <div class="nav-list-container">
+                <ul>
+                  <li><a href="" class="active">Home</a></li>
+                  <li><a href="">Tours</a></li>
+                  <li><a href="">Hotel</a></li>
+                  <li><a href="">Gallery</a></li>
+                  <li><a href="">Pages</a></li>
+                  <li><a href="">Blog</a></li>
+                  <li><a href="">Contact</a></li>
+                  <li><a href="">Login</a></li>
+                  </ul>
+                  <button class="sign-up-btn">Sign UP</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </nav>
       <div class="content-container header-content">
         <div class="content-wrapper">
           <h1>It’s a Big World Out There, Go Explore</h1>
-
+  
           <p class="description-text">
             Conveniently customize proactive web services for leveraged without
             continualliery aggregate fricctionle ou wellies richard.and very
             customize continually.
           </p>
-
+  
           <button class="get-exploration-btn">Get Exploration</button>
           <button class="read-more-btn">Read More</button>
         </div>
