--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./stylesheets/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
     <title>Explore</title>
   </head>
   <body>
@@ -89,10 +89,10 @@
       </article>
     </div>
     <main class="main">
-        <section class="about-us-section">
+        <section class="about-us-section container">
             <div class="images-container">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img class="img1" src="./stylesheets/images/img1.jpg" alt="photo">
+                <img class="overlay" src="./stylesheets/images/overlayed_img.png" alt="photo">
             </div>
             <div class="about-us-container about-us">
                 <h4>About us</h4>
